# steg-lang

./: .gitmodules  CMakeLists.txt  README.fr.md  README.md  main.cpp  readme.md  test.stegasm  version.h.in
.github/workflows/: ci.yml
doc/: asm.md  steg.fr.md  steg.md  steganografer.md  stegasm.md
doc/img/: logo_steg.ai  logo_steg_small.ai
examples/3D/: WolfenSteg.steg  file_loader.steg  renderer.steg
examples/3D/game/: door_helper.steg  enemy_helper.steg  loader.steg  map_helper.steg  player_helper.steg  sprite_helper.steg  static_things_helper.steg  texture_helper.steg  things_helper.steg
examples/fibonacci/: fibonacci.md
examples/files/: files.md
examples/tetris/: tetris.stegasm
examples/tetris/game/: game_over.stegasm  level.stegasm  lines.stegasm  map.stegasm  score.stegasm  stats.stegasm
examples/tetris/game/blocks/: block_definition.stegasm  choose_random_next_block.stegasm  draw_alive_block.stegasm  draw_current_block.stegasm  draw_next_block.stegasm  move_next_to_current.stegasm  place_current_block_on_map.stegasm
examples/tetris/game/blocks/move/: can_current_move.stegasm  move_current.stegasm
examples/tetris/game/inputs/: check_move_down.stegasm  check_rotation.stegasm
examples/tetris/game/map/: line_anim.stegasm  line_detection.stegasm
examples/tetris/utils/: display_string.stegasm  number_in_string.stegasm
libs/stegcommon/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Colors.h  utils.h
src/handlers/: IHander.h
src/steganographer/: ByteBuffer.cpp  ByteBuffer.h  Steganographer.cpp  Steganographer.h  constant.h  header.hpp
src/steganographer/sequences/: ReadSequence.cpp  ReadSequence.h  WriteSequence.cpp  WriteSequence.h
src/utils/: Parameters.cpp  Parameters.h
steg/: CMakeLists.txt  main.cpp
steg/src/: compiler.h  main.cpp
steg/src/IR/: IRGenerator.cpp  IRGenerator.h  IRLowering.cpp  IRLowering.h  IRPrinter.cpp  IRPrinter.h  ir_structure.h
steg/src/asm_gen/: AsmGenerator.cpp  AsmGenerator.h  Registerallocator.h
steg/src/ast/: ASTExpressionNode.cpp  ASTExpressionNode.h  ASTNode.h  ASTProgramNode.cpp  ASTProgramNode.h  ASTStatementNode.cpp  ASTStatementNode.h  ASTTypeNode.h  ASTVisitor.h
steg/src/lexer/: Lexer.cpp  Lexer.h  TextParser.cpp  TextParser.h  lexer_definitions.h
steg/src/linter/: Linter.cpp  Linter.h
steg/src/parser/: parser_expressions.h  parser_program.h  parser_utils.h
steg/src/parser/expressions/: parse_binary.h  parse_expressions.h  parse_expressions_utils.h  parse_primary.h  parse_types.h  parse_unary.h  parser_assignments.h  parser_expressions.h
steg/src/parser/monadic/: monadic.hpp  string_parser.h
steg/src/parser/statements/: parse_block.h  parse_break_continue.h  parse_expression_statement.h  parse_for.h  parse_if.h  parse_return.h  parse_statements.h  parse_variables.h  parse_while.h
steg/src/semantic_analysis/: ModuleManager.h  SymbolTable.h  analyzeExports.h  helpers.h
steg/src/semantic_analysis/exports/: ExportCollector.h
steg/src/semantic_analysis/step1/: SymbolCollector.h
steg/src/semantic_analysis/step2/: SemanticTokensVisitor.h  TypeInferenceVisitor.cpp  TypeInferenceVisitor.h
steg/src/semantic_analysis/step3/: ControlFlowVisitor.cpp  ControlFlowVisitor.h
steg/src/semantic_analysis/utils/: ResolvedType.h  SymbolTable.h
steganographer/handlers/: CodeHandler.cpp  CodeHandler.h  FileHandler.cpp  StringHandler.cpp  handlers.h
steganographer/images/: Image.cpp  Image.h  Pixels.h  pixel.h
steganographer/steganographer/: Header.hpp  Random32.h  SequenceManager.cpp  SequenceManager.h  Steganographer.cpp  constant.h
steganographer/steganographer/sequences/: ReadSequence.cpp  ReadSequence.h
steganographer/utils/: Parameters.cpp  Parameters.h
stegasm/: CMakeLists.txt
stegasm/src/: check_instructions.hpp  instruction_utils.hpp  instructions.cpp  instructions.h  main.cpp
stegasm/src/assembler/: Assembler.cpp  Assembler.h  Linter.cpp  Linter.h  Symbol.cpp  TextParser.cpp  TextParser.h  assembler_exception.h
stegasm/src/assembler/utils/: FileSet.cpp  FileSet.h  InstructionSet.cpp  InstructionSet.h  SubtexturesSet.cpp  VariableSet.cpp  VariableSet.h  utils.cpp  utils.h
stegasm/src/compiler/: Compiler.cpp
stegasm/src/interpreter/: Loader.cpp  Loader.h  Vm.cpp  Vm.h  exceptions.h
stegasm/src/interpreter/runtime/: Clocks.cpp  Clocks.h  Files.cpp  Files.h  GraphicalBackend.cpp  GraphicalBackend.h  InstructionView.h  InstructionViewImpl.h  Memory.cpp  Memory.h  Registries.cpp  Registries.h  Runtime.h  Stack.h  TimeDebugger.h  Utils.cpp  Utils.h
stegasm/src/interpreter/runtime/files/: File.cpp  File.h
stegasmLsp/: CMakeLists.txt
stegasmLsp/src/: main.cpp
stegcli/: CMakeLists.txt  file_to_cpp.cmake  main.cpp
stegcli/sample_projects/: steg.md
test/: test_steganographer.cpp
